# pypsa-fbmc

./: .gitignore  LICENSE  README.md  copy.sh  environment.yml  main.py  multi_run.sh  paths.toml  paths.toml.example  prepare.sh  pyproject.toml  requirements.txt  run.sh  run_tests.py  setup.sh
config/: base_config.yaml  run_node_mapping.json  security_constrained.yaml  unit_commitment.yaml
docs/: conf.py  index.rst  quickstart.rst  requirements.txt
docs/api/: create_model.rst  enums.rst  results.rst  run_fbmc.rst  to_zonal.rst  types.rst
docs/concepts/: fbmc_overview.rst  ptdf.rst  ram.rst
docs/examples/: custom_cnecs.ipynb  fbmc_analysis.ipynb  minimal_example.ipynb
docs/inputs/: base_case.rst  cnec.rst  config.rst  gsk.rst
examples/: fbmc_analysis.ipynb
examples/old/: fbmc_example.ipynb
input_networks/pypsa-eur_central_northern/: bus_zone_map.csv
notebooks/: analyze_results.ipynb  fbmc_example.ipynb  gsk_comparison.ipynb  gsk_redispatch.ipynb  merit_order_gsk.ipynb  test_net.ipynb
scripts/: nodal_to_zonal.py
scripts/analyse/: rm.py  ua_coupling.py
scripts/plot/: ua_coupling.py
scripts/run/: minimal_example.py  rm_loop.py  ua_bodf_threshold_compare.py  ua_coupling.py  ua_security_rmf_compare.py  water_valuation.py
src/: config.py  enums.py  paths.py  runner.py  types.py
src/case_creation/: advanced_hybrid_check.py  basic_three_node.py  case_alteration.py  custom.py  four_node.py  (+12 more)
tests/: test_basic_results.py  test_fbmc_flows.py  test_fbmc_params.py  test_gsk.py  test_security_constrained.py  test_workflow.py  workflow_test_case.py
(+122 files in other folders)
