[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pypsa-fbmc"
version = "0.1.0"
description = "Flow-Based Market Coupling (FBMC) extension for PyPSA"
requires-python = ">=3.11"
dependencies = [
    "pypsa>=0.35",
    "linopy>=0.7",
    "numpy>=1.26",
    "pandas>=2.2",
    "scipy>=1.11",
    "xarray>=2024.3",
    "gurobipy>=12.0",
    "networkx>=3.0",
    "matplotlib>=3.7",
    "geopandas>=1.0",
    "netCDF4>=1.6",
    "pyyaml>=6.0",
    "tomli>=2.0; python_version < '3.11'",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
fbmc = ["config/*.yaml", "data/*.csv"]
